manifests/k8s-dashboard/vitrual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: k8s-dashboard
  namespace: kube-system
spec:
  hosts:
    - "k8s-dashboard.xplaceinmyheart.ru"
  gateways:
    - k8s-dashboard
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        port: 443
    - match:
        - port: 443
      route:
        - destination:
            host: kubernetes-dashboard
            port:
              number: 443
